--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                 <h1> Who We Are?</h1>
                 <p>Talimuddin Inter College is located in
                  urban area of Uttar Pradesh state of India.
-                 It is located in of Mau district.<br>
+                 It is located in Mau district.<br>
                  School is providing Upper Primary, Secondary, High Secondary (6-12)
                  level education and is being managed by U.P. 
                  Government Aided Organisation. Medium of instruction 
