--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College Website Design</title>
+    <title>Talimuddin Inter College</title>
     <link rel="stylesheet" href="new.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -24,8 +24,8 @@
     </nav>
         <div class="text-box">
             <h1>Best College In Mau City</h1>
-            <p>Established in year 1966, TALIMUDDIN INTER COLLEGE MAU <br> is located in Rural area of Uttar Pradesh state of India. In area of Maunath Bhajan block of Mau district.</p>
-            <a href="" class="hero-btn">Visit Us To Know More</a>
+            <p>Established in year 1966, Talimuddin Inter College is located in Mau Nath Bhanjan Rural area of Uttar Pradesh state of India.</p>
+            <a href="https://en.wikipedia.org/wiki/Talimuddin_Inter_College" class="hero-btn">Visit Us To Know More</a>
         </div>
     </section>
     <!--JAVASCRIPT FOR TOGGLE MENU-->
